--- a/app/src/main/res/layout/view_login.xml
+++ b/app/src/main/res/layout/view_login.xml
@@ -20,7 +20,7 @@
                 android:layout_height="100dp"
                 android:layout_marginTop="150dp"
                 android:layout_gravity="center"
-                android:src="@drawable/logo"
+                android:src="@drawable/yokohama"
             />
 
             <EditText
