--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
             android:layout_height="100dp"
             android:layout_marginTop="150dp"
             android:layout_gravity="center"
-            android:src="@drawable/yokohama"
+            android:src="@drawable/logo"
             />
 
         <EditText
