--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,9 +69,10 @@
             android:visibility="gone"
             >
             <TextView
-                android:id="@+id/formSubName"
+                android:id="@+id/attachment"
                 android:layout_height="30dp"
-                android:layout_width="wrap_content"/>
+                android:layout_width="wrap_content"
+                android:visibility="gone"/>
         </LinearLayout>
 
     </ScrollView>
