--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,12 +18,20 @@
             android:src="@drawable/ic_action_back"
             android:visibility="gone"
             />
+
+        <TextView
+            android:id="@+id/label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Categories"
+            android:textSize="20dp"
+            />
         <ImageView
             android:id="@+id/captureImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="top|right"
             android:src="@drawable/ic_action_camera"
-            android:layout_marginLeft="300dp"
             android:visibility="gone"
             />
 
