Label in each views

--- a/app/src/main/res/layout/view_form.xml
+++ b/app/src/main/res/layout/view_form.xml
@@ -44,6 +44,33 @@
                 android:padding="10dp"
                 />
 
+            <Button
+                android:id="@+id/retrieve"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Retrieve Forms"
+                android:layout_marginTop="20dp"
+                android:padding="5dp"
+                />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Retrieve Forms"
+                android:layout_marginTop="20dp"
+                android:padding="5dp"
+                />
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:id="@+id/retrieveForms"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:visibility="gone"
+                android:padding="10dp"
+                />
+
         </LinearLayout>
     </ScrollView>
 </merge>
