--- a/app/src/main/res/layout/view_group_question.xml
+++ b/app/src/main/res/layout/view_group_question.xml
@@ -13,15 +13,6 @@
         android:orientation="vertical"
         >
 
-        <TextView
-            android:id="@+id/questionType"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Question Group"
-            android:layout_marginTop="20dp"
-            android:padding="5dp"
-            />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -33,6 +24,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Question Name"
+                android:textSize="20dp"
                 android:layout_marginTop="20dp"
                 android:padding="10dp"
                 />
