--- a/app/src/main/res/layout/view_category.xml
+++ b/app/src/main/res/layout/view_category.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:animateLayoutChanges="true"
-        android:background="@android:color/white"
+        android:background="@color/white"
         android:orientation="vertical"
         >
 
