--- a/app/src/main/res/layout/view_group_question.xml
+++ b/app/src/main/res/layout/view_group_question.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:res-auto="http://schemas.android.com/apk/res-auto"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:animateLayoutChanges="true"
-        android:background="@android:color/white"
+        android:background="@color/orange"
         android:orientation="vertical"
         >
 
@@ -29,18 +30,17 @@
                 android:padding="10dp"
                 />
 
-            <ImageButton
+            <com.melnykov.fab.FloatingActionButton
                 android:id="@+id/add_new"
-                android:layout_width="50dp"
-                android:layout_height="40dp"
-                android:layout_weight="1"
-                android:text="Login"
-                android:background="@drawable/add_new"
-                android:textColor="#ffffff"
-                android:textSize="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|right"
+                android:layout_margin="16dp"
+                android:src="@drawable/add_new"
                 android:visibility="gone"
-                android:layout_margin="2dp"
-                 />
+                fab:fab_colorNormal="@color/accentColor"
+                fab:fab_colorPressed="@color/pressed"
+                fab:fab_colorRipple="@color/accentColor" />
 
         </LinearLayout>
 
