--- a/app/src/main/res/layout/view_question_date_field.xml
+++ b/app/src/main/res/layout/view_question_date_field.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:animateLayoutChanges="true"
-        android:background="@android:color/white"
+        android:background="@color/yellow_light"
         android:orientation="vertical"
         >
 
