--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="orange">#FF9800</color>
+    <color name="orange_dark">#F57C00</color>
+    <color name="orange">#ffffbb33</color>
     <color name="white">#FFFFFF</color>
+    <color name="light_primary_color">#FFE0B2</color>
+    <color name="yellow_light">#ffffcc66</color>
+    <color name="accentColor">#FF5722</color>
+    <color name="pressed">#FF1111</color>
+    <color name="green">#4CAF50</color>
+    <color name="red">#F44336</color>
 </resources>
