--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"
-            android:padding="2dp"
+            android:padding="5dp"
             android:visibility="gone"
             />
 
@@ -63,13 +63,13 @@
         android:visibility="gone"
         />
 
-    <com.dilimanlabs.formbase.views.FormsView
-        android:id="@+id/formsView"
+    <LinearLayout
+        android:orientation="vertical"
+        android:id="@+id/formsViewContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
         />
-
 
 
     <com.dilimanlabs.formbase.views.FormView
