--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,20 +27,24 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:hint="Username"
-            android:layout_marginTop="100dp"
+            android:maxLines="1"
+            android:layout_marginTop="70dp"
             />
         <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:inputType="textPassword"
             android:layout_height="70dp"
+            android:maxLines="1"
             android:hint="Password"
             android:layout_marginTop="5dp"
             />
         <Button
             android:id="@+id/login"
+            android:background="@color/yokohama_dark"
             android:layout_width="match_parent"
             android:layout_height="70dp"
+            android:textColor="@color/white"
             android:text="Login"
             android:layout_marginTop="5dp"/>
 
