--- a/app/src/main/res/layout/view_answers.xml
+++ b/app/src/main/res/layout/view_answers.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:background="@android:color/holo_orange_light"
+        android:background="@color/yokohama_black"
         android:padding="16dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -14,18 +14,21 @@
 
         <TextView
             android:id="@+id/submitted_by"
+            android:textColor="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Submitted By"/>
 
         <TextView
             android:id="@+id/state"
+            android:textColor="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="State"/>
 
         <TextView
             android:id="@+id/date"
+            android:textColor="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Date"/>
