--- a/app/src/main/res/layout/view_category.xml
+++ b/app/src/main/res/layout/view_category.xml
@@ -20,6 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Categories"
+            android:textSize="20dp"
             android:layout_marginTop="20dp"
             android:padding="10dp"
             />
