--- a/app/src/main/res/layout/view_forms.xml
+++ b/app/src/main/res/layout/view_forms.xml
@@ -22,6 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Forms"
+                android:textSize="20dp"
                 android:layout_marginTop="20dp"
                 android:padding="5dp"
                 />
@@ -39,6 +40,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Sub Category"
+                android:textSize="20dp"
                 android:layout_marginTop="20dp"
                 android:padding="5dp"
                 />
