--- a/app/src/main/res/layout/view_previous.xml
+++ b/app/src/main/res/layout/view_previous.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:background="@android:color/holo_orange_light"
+        android:background="@color/yokohama_black"
         android:padding="16dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -14,12 +14,14 @@
 
         <TextView
             android:id="@+id/name"
+            android:textColor="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Submitted By"/>
 
         <TextView
             android:id="@+id/state"
+            android:textColor="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="State"/>
