--- a/app/src/main/res/layout/view_question_date_field.xml
+++ b/app/src/main/res/layout/view_question_date_field.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:animateLayoutChanges="true"
-        android:background="@color/yellow_light"
+        android:background="@color/background"
         android:orientation="vertical"
         >
 
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Date"
+            android:textColor="@color/text_color"
             android:textSize="20dp"
             android:layout_marginTop="20dp"
             android:padding="5dp"
@@ -27,6 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:textColor="@color/text_color"
             android:textSize="15dp"
             android:clickable="true"
             android:padding="10dp"/>
