--- a/app/src/main/res/layout/view_question_switch.xml
+++ b/app/src/main/res/layout/view_question_switch.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:animateLayoutChanges="true"
-        android:background="@color/yellow_light"
+        android:background="@color/background"
         android:orientation="vertical"
         >
 
@@ -19,6 +19,7 @@
             android:layout_height="wrap_content"
             android:text="Question Name"
             android:textSize="20dp"
+            android:textColor="@color/text_color"
             android:layout_marginTop="20dp"
             android:padding="5dp"
             />
