--- a/app/src/main/res/layout/view_group_question.xml
+++ b/app/src/main/res/layout/view_group_question.xml
@@ -42,6 +42,13 @@
                 fab:fab_colorNormal="@color/accentColor"
                 fab:fab_colorPressed="@color/pressed"
                 fab:fab_colorRipple="@color/accentColor" />
+            <ImageView
+                android:id="@+id/expand"
+                android:layout_gravity="top|left"
+                android:src="@drawable/ic_action_expand"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp"/>
 
         </LinearLayout>
 
@@ -76,7 +83,7 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:id="@+id/scrollViewRepeater"
             android:visibility="gone">
 
@@ -92,8 +99,7 @@
                     android:id="@+id/remove_new"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_gravity="right"
+                    android:layout_gravity="top|right"
                     android:text="Login"
                     android:background="@drawable/remove_new"
                     android:textColor="#ffffff"
