--- a/app/src/main/res/layout/view_form.xml
+++ b/app/src/main/res/layout/view_form.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:res-auto="http://schemas.android.com/apk/res-auto"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -18,19 +19,20 @@
             android:orientation="vertical"
             >
             <TextView
+                android:layout_marginTop="20dp"
+                android:id="@+id/formLabel"
+                android:layout_width="wrap_content"
+                android:textSize="20dp"
+                android:padding="5dp"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:layout_marginTop="10dp"
                 android:id="@+id/note"
                 android:text="Note: Please select submission bin before adding new form."
+                android:padding="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="gone"/>
-            <Button
-                android:id="@+id/addButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Add new"
-                android:layout_marginTop="20dp"
-                android:padding="5dp"
-                />
 
             <TextView
                 android:layout_width="match_parent"
@@ -67,6 +69,18 @@
                 android:layout_marginTop="20dp"
                 android:visibility="gone"
                 android:padding="10dp"/>
+
+            <com.melnykov.fab.FloatingActionButton
+                android:id="@+id/addButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|right"
+                android:layout_margin="16dp"
+                android:src="@drawable/add_new"
+                android:visibility="gone"
+                fab:fab_colorNormal="@color/accentColor"
+                fab:fab_colorPressed="@color/pressed"
+                fab:fab_colorRipple="@color/accentColor" />
 
         </LinearLayout>
     </ScrollView>
