--- a/app/src/main/res/layout/view_form.xml
+++ b/app/src/main/res/layout/view_form.xml
@@ -14,22 +14,24 @@
             android:id="@+id/formView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/yokohama_forms_background"
             android:animateLayoutChanges="true"
-            android:background="@color/white"
             android:orientation="vertical"
             >
             <TextView
-                android:layout_marginTop="20dp"
                 android:id="@+id/formLabel"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
+                android:textColor="@color/white"
+                android:background="@color/yokohama_light_dark"
                 android:textSize="20dp"
-                android:padding="5dp"
+                android:padding="10dp"
                 android:layout_height="wrap_content"/>
             <TextView
                 android:layout_marginTop="10dp"
                 android:id="@+id/note"
+                android:textColor="@color/white"
                 android:text="Note: Please select submission bin before adding new form."
-                android:padding="5dp"
+                android:padding="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="gone"/>
@@ -38,8 +40,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Previous Forms"
+                android:textColor="@color/white"
+                android:background="@color/yokohama_light_dark"
+                android:textSize="20dp"
                 android:layout_marginTop="20dp"
-                android:padding="5dp"
+                android:padding="10dp"
                 />
 
             <LinearLayout
@@ -47,9 +52,7 @@
                 android:id="@+id/previousForms"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
                 android:visibility="gone"
-                android:padding="10dp"
                 />
 
             <TextView
@@ -57,8 +60,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Retrieve Forms"
-                android:layout_marginTop="20dp"
-                android:padding="5dp"
+                android:textColor="@color/white"
+                android:background="@color/yokohama_light_dark"
+                android:textSize="20dp"
+                android:padding="10dp"
                 />
 
             <LinearLayout
@@ -66,9 +71,7 @@
                 android:id="@+id/retrieveForms"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:visibility="gone"
-                android:padding="10dp"/>
+                android:visibility="gone"/>
 
             <com.melnykov.fab.FloatingActionButton
                 android:id="@+id/addButton"
@@ -78,9 +81,9 @@
                 android:layout_margin="16dp"
                 android:src="@drawable/add_new"
                 android:visibility="gone"
-                fab:fab_colorNormal="@color/accentColor"
+                fab:fab_colorNormal="@color/yokohama_red"
                 fab:fab_colorPressed="@color/pressed"
-                fab:fab_colorRipple="@color/accentColor" />
+                fab:fab_colorRipple="@color/yokohama_red" />
 
         </LinearLayout>
     </ScrollView>
