--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,35 +17,51 @@
         <ImageView
             android:layout_width="150dp"
             android:layout_height="100dp"
-            android:layout_marginTop="150dp"
+            android:layout_marginTop="90dp"
             android:layout_gravity="center"
-            android:src="@drawable/logo"
+            android:src="@drawable/ic_launcher"
             />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="FormBase"
+            android:textSize="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center"
+            android:textColor="@color/yokohama_black"/>
 
         <EditText
             android:id="@+id/username"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="50dp"
+            android:inputType="text"
             android:hint="Username"
             android:maxLines="1"
-            android:layout_marginTop="70dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="60dp"
             />
         <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:inputType="textPassword"
-            android:layout_height="70dp"
+            android:layout_height="50dp"
             android:maxLines="1"
             android:hint="Password"
             android:layout_marginTop="5dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="60dp"
             />
         <Button
             android:id="@+id/login"
-            android:background="@color/yokohama_dark"
+            android:background="@color/formbase_generic"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="50dp"
             android:textColor="@color/white"
-            android:text="Login"
+            android:text="Sign in to your Account"
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="60dp"
             android:layout_marginTop="5dp"/>
 
     </LinearLayout>
