--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 <LinearLayout
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:id="@+id/mainLayout"
-    android:background="@color/white"
+    android:background="@color/yokohama_black"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
