--- a/app/src/main/res/layout/drawer.xml
+++ b/app/src/main/res/layout/drawer.xml
@@ -2,7 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/drawer"
     android:layout_gravity="start"
-    android:background="@color/white"
+    android:background="@color/yokohama_black"
     android:layout_width="320dp"
     android:layout_height="match_parent">
 
@@ -24,7 +24,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/yokohama_logo"/>
+                android:src="@drawable/els"/>
 
             <TextView
                 android:id="@+id/name"
@@ -63,8 +63,6 @@
             android:gravity="left|center_vertical"
             android:orientation="vertical"
             android:id="@+id/projects"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -99,7 +97,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
-            android:background="@color/yokohama_black"
+            android:background="@color/yokohama_black_lighter"
             android:text="Logout"
             />
 
