--- a/app/src/main/res/layout/view_category.xml
+++ b/app/src/main/res/layout/view_category.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:animateLayoutChanges="true"
-        android:background="@color/white"
+        android:background="@color/yokohama_black"
         android:orientation="vertical"
         >
 
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"
             android:text="Categories"
             android:textSize="20dp"
+            android:textColor="@color/white"
             android:layout_marginTop="20dp"
             android:padding="10dp"
             />
@@ -31,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:padding="20dp"
+            android:padding="10dp"
             />
 
     </LinearLayout>
