--- a/app/src/main/res/layout/view_category_card.xml
+++ b/app/src/main/res/layout/view_category_card.xml
@@ -17,20 +17,20 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:src="@drawable/submitted"
-                android:layout_width="30dp"
-                android:layout_height="40dp"
+                android:src="@drawable/folder_icon"
+                android:layout_width="50dp"
+                android:layout_height="60dp"
                 android:layout_marginRight="20dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/submitted_by"
+                    android:id="@+id/categoryName"
                     android:textColor="@color/white"
-                    android:textSize="15dp"
+                    android:textSize="20dp"
                     android:maxLines="1"
                     android:text="Category"
                     android:layout_width="wrap_content"
@@ -40,21 +40,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="10dp" />
                 <TextView
-                    android:id="@+id/state"
+                    android:id="@+id/formNumber"
                     android:textColor="@color/white"
-                    android:textSize="10dp"
-                    android:text="Form"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:id="@+id/date"
-                    android:textColor="@color/white"
-                    android:textSize="10dp"
+                    android:textSize="15dp"
                     android:text="Form"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
-            </LinearLayout>
+           </LinearLayout>
 
         </LinearLayout>
 
