--- a/app/src/main/res/layout/view_form_card.xml
+++ b/app/src/main/res/layout/view_form_card.xml
@@ -17,42 +17,29 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:src="@drawable/submitted"
-                android:layout_width="30dp"
-                android:layout_height="40dp"
+                android:src="@drawable/form_icon"
+                android:layout_width="50dp"
+                android:layout_height="60dp"
                 android:layout_marginRight="20dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/submitted_by"
+                    android:layout_marginTop="10dp"
+                    android:id="@+id/formName"
                     android:textColor="@color/white"
-                    android:textSize="15dp"
-                    android:maxLines="1"
-                    android:text="Category"
+                    android:textSize="20dp"
+                    android:text="Form"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
+
                 <ImageView
                     android:src="@drawable/divider"
                     android:layout_width="match_parent"
                     android:layout_height="10dp" />
-                <TextView
-                    android:id="@+id/state"
-                    android:textColor="@color/white"
-                    android:textSize="10dp"
-                    android:text="Form"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:id="@+id/date"
-                    android:textColor="@color/white"
-                    android:textSize="10dp"
-                    android:text="Form"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
 
             </LinearLayout>
 
