--- a/app/src/main/res/layout/view_forms.xml
+++ b/app/src/main/res/layout/view_forms.xml
@@ -14,36 +14,62 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:animateLayoutChanges="true"
-            android:background="@color/white"
+            android:background="@color/yokohama_forms_background"
             android:orientation="vertical"
             >
 
-            <TextView
+            <LinearLayout
+                android:padding="10dp"
+                android:background="@color/yokohama_black"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Forms"
+                android:orientation="horizontal">
+
+            <ImageView
+                android:src="@drawable/form_icon"
+                android:layout_width="30dp"
+                android:layout_height="40dp"
+                android:layout_marginRight="20dp"/>
+                
+            <TextView
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:textSize="20dp"
-                android:layout_marginTop="20dp"
-                android:padding="5dp"
-                />
+                android:textColor="@color/white"
+                android:text="Forms"/>
+
+            </LinearLayout>
+
 
             <LinearLayout
                 android:orientation="vertical"
                 android:id="@+id/layoutForms"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:padding="10dp"
                 />
 
-            <TextView
+            <LinearLayout
+                android:padding="10dp"
+                android:background="@color/yokohama_black"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Sub Category"
-                android:textSize="20dp"
-                android:layout_marginTop="20dp"
-                android:padding="5dp"
-                />
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:src="@drawable/subcategory_icon"
+                    android:layout_width="30dp"
+                    android:layout_height="40dp"
+                    android:layout_marginRight="20dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20dp"
+                    android:textColor="@color/white"
+                    android:text="Sub Category"/>
+
+            </LinearLayout>
 
             <LinearLayout
                 android:orientation="vertical"
