--- a/app/src/main/res/layout/view_previous.xml
+++ b/app/src/main/res/layout/view_previous.xml
@@ -7,25 +7,49 @@
 
     <LinearLayout
         android:background="@color/yokohama_black"
-        android:padding="16dp"
         android:orientation="vertical"
+        android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/name"
-            android:textColor="@color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Submitted By"/>
+            <ImageView
+                android:src="@drawable/form_icon"
+                android:layout_width="30dp"
+                android:layout_height="40dp"
+                android:layout_marginRight="20dp"/>
 
-        <TextView
-            android:id="@+id/state"
-            android:textColor="@color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="State"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:orientation="vertical">
 
+                <TextView
+                    android:id="@+id/name"
+                    android:textColor="@color/white"
+                    android:textSize="15dp"
+                    android:maxLines="1"
+                    android:text="Category"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <ImageView
+                    android:src="@drawable/divider"
+                    android:layout_width="match_parent"
+                    android:layout_height="10dp" />
+                <TextView
+                    android:id="@+id/state"
+                    android:textColor="@color/white"
+                    android:textSize="10dp"
+                    android:text="Form"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
+        </LinearLayout>
 
     </LinearLayout>
 
