--- a/app/src/main/res/layout/view_question_numberfield.xml
+++ b/app/src/main/res/layout/view_question_numberfield.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:animateLayoutChanges="true"
-        android:background="@color/background"
+        android:background="@color/white"
         android:orientation="vertical"
         >
 
