--- a/app/src/main/res/layout/view_question_switch.xml
+++ b/app/src/main/res/layout/view_question_switch.xml
@@ -34,5 +34,15 @@
             android:padding="10dp"
             />
 
+        <LinearLayout
+            android:orientation="vertical"
+            android:id="@+id/requirement"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:layout_marginTop="20dp"
+            android:padding="10dp"
+            />
+
     </LinearLayout>
 </merge>
