--- a/app/src/main/res/layout/drawer.xml
+++ b/app/src/main/res/layout/drawer.xml
@@ -24,7 +24,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/els"/>
+                android:src="@drawable/yokohama_logo"/>
 
             <TextView
                 android:id="@+id/name"
