--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,6 +68,12 @@
 
     </android.support.v7.widget.Toolbar>
 
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/map"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:name="com.google.android.gms.maps.MapFragment"/>
+
     <com.dilimanlabs.formbase.views.LoginView
         android:id="@+id/loginView"
         android:layout_width="match_parent"
