--- a/app/src/main/res/layout/view_answers.xml
+++ b/app/src/main/res/layout/view_answers.xml
@@ -28,17 +28,24 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/submitted_by"
+                    android:id="@+id/name"
                     android:textColor="@color/white"
                     android:textSize="15dp"
                     android:maxLines="1"
-                    android:text="Category"
+                    android:text="Name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <ImageView
                     android:src="@drawable/divider"
                     android:layout_width="match_parent"
                     android:layout_height="10dp" />
+                <TextView
+                    android:id="@+id/submitted_by"
+                    android:textColor="@color/white"
+                    android:textSize="10dp"
+                    android:text="User"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
                 <TextView
                     android:id="@+id/state"
                     android:textColor="@color/white"
